[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config_manager"
version = "2.0.0"
authors = [
  { name="Zachary Hubbell", email="zhubbell@midwestholding.com" },
]
description = "A package for managing configuration files with variables and secrets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'httpx',
  'click',
  'pyyaml',
]

[project.urls]
"Homepage" = "https://gitlab.midwestholding.dev/midwest-holding-developers/configmanager"
